--- a/host-nuc/config/i3/config
+++ b/host-nuc/config/i3/config
@@ -63,8 +63,8 @@ bindsym		$mod+o		exec arduino
 bindsym		$mod+p		exec --no-startup-id vpn
 bindsym		$mod+F1		exec --no-startup-id redshift
 bindsym		$mod+F2		exec --no-startup-id killall redshift
-bindsym		$mod+F3		exec --no-startup-id xautolock -time 10 -locker slock
-bindsym		$mod+F4		exec --no-startup-id killall xautolock
+bindsym		$mod+F3		exec --no-startup-id xss-lock slock
+bindsym		$mod+F4		exec --no-startup-id killall xss-lock
 
 # kill focused window
 bindsym $mod+Shift+q kill
